infra/kubernetes/backend-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-stable
  namespace: devops
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
      version: stable
  template:
    metadata:
      labels:
        app: backend
        version: stable
    spec:
      containers:
        - name: backend
          image: devops-backend:stable
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
